<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1C86EE" >

    <LinearLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="64dp"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/temphightolow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/temphightolow"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/weatherimage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="5dp" />

            <TextView
                android:id="@+id/daytemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="8dp"
                android:textColor="#ffffff"
                android:textSize="60dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/dayweather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="22dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_top"
        android:layout_marginTop="40dp"
        android:background="#20FCFAFA"
        android:orientation="vertical" >

        <View
            android:id="@+id/tv_line_eveiryday"
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="#60ABA7A7"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/everyday"
            android:textColor="#ffffff" />

        <View
            android:id="@+id/tv_line_top"
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="#60ABA7A7" />

        <GridView
            android:id="@+id/listView1"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:gravity="center"
            android:listSelector="@android:color/transparent"
			android:scrollbars="none"
            android:numColumns="5" >
        </GridView>

        <View
            android:id="@+id/tv_line"
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="#60ABA7A7" />
    </LinearLayout>

    <include
        android:id="@+id/main_bottom"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@+id/ll_center"
        android:layout_marginTop="12dp"
        layout="@layout/main_layout_bottom" />

    <TextView
        android:id="@+id/tv_main_updatetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/main_bottom"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="8dp"
        android:textSize="12sp"
        android:text="@string/datetime"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/sunraise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:text="@string/sunraise"
        android:textColor="#ffffff"
        android:textSize="15dp"
        android:visibility="gone" />

</RelativeLayout>
