<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/wholerelativelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:layoutDirection="ltr" >
	
	<RelativeLayout
    	android:id="@+id/linerlayouthour"
    	android:layout_width="150dp"
    	android:layout_height="90dp"
    	android:layout_marginLeft="10dp"
    	android:layout_marginRight="10dp"
    	android:layout_alignParentTop="true" >
    	
	   <TextClock
            android:id="@+id/the_clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:format12Hour="hh:mm"
            android:format24Hour="kk:mm"
            android:singleLine="true"
            android:textColor="#ffffff"
            android:textSize="50sp"
            android:layout_marginTop="6dp"
            
             />
	    
<!--         <ImageView
        	android:id="@+id/imageView1"
            android:layout_width="28dp"
            android:layout_height="40dp"
			android:layout_marginTop="24dp"
            android:src="@drawable/num_01" />

        <ImageView
        	android:id="@+id/imageView2"
            android:layout_width="28dp"
            android:layout_height="40dp"
			android:layout_marginTop="24dp"
			android:layout_toRightOf="@+id/imageView1"
            android:src="@drawable/num_01" />

		<ImageView
            android:id="@+id/imageViewpoint"
            android:layout_width="8dp"
            android:layout_height="40dp"
			android:layout_marginTop="24dp"
			android:layout_toRightOf="@+id/imageView2"
            android:src="@drawable/alarm_num_colon" />

		<ImageView
            android:id="@+id/imageView3"
            android:layout_width="28dp"
            android:layout_height="40dp"
			android:layout_marginTop="24dp"
			android:layout_toRightOf="@+id/imageViewpoint"
            android:src="@drawable/num_01" />


        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="28dp"
            android:layout_height="40dp"
			android:layout_marginTop="24dp"
			android:layout_toRightOf="@+id/imageView3"
            android:src="@drawable/num_04" /> -->


		<TextClock
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="#ffffff"
			android:singleLine="true"
			android:layout_marginLeft="4dp"
			android:layout_alignParentBottom="true"
            android:textSize="13sp" />
	</RelativeLayout>

	<ImageView
    	android:id="@+id/viewdivider"
        android:layout_width="1px"
        android:layout_height="70dp"
        android:layout_alignTop="@+id/linerlayouthour"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
		android:layout_marginTop="16dp"
        android:layout_toRightOf="@+id/linerlayouthour"
        android:background="#40ffffff" />


    <RelativeLayout
        android:id="@+id/linerlayout_weather"
        android:layout_width="230dp"
        android:layout_height="90dp"
		android:layout_alignTop="@+id/linerlayouthour"
        android:layout_toRightOf="@+id/viewdivider">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="50dp"
            android:layout_height="50dp"
			android:layout_marginLeft="15dp"
			android:layout_marginTop="15dp"
            android:src="@drawable/org3_ww0" />

		<TextView
            android:id="@+id/weather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
			android:layout_alignBottom="@+id/imageView5"
			android:layout_toRightOf="@+id/imageView5"
            android:text="@string/weather"
            android:textColor="#ffffff"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
			android:layout_alignParentBottom="true"
            android:textColor="#ffffff"
			android:layout_marginLeft="38dp"
            android:textSize="15sp" />

         <TextView
         	android:id="@+id/skyweather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/skycell"
            android:layout_marginTop="-5dp"
            android:textColor="#ffffff"
			android:visibility="gone"
            android:textSize="15sp" />
    </RelativeLayout>

    <!--
         <View
        android:layout_width="2dp"
        android:layout_height="wrap_content"
        android:background="#000000" />
    -->

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linerlayout1"
        android:layout_marginTop="-20dp" >

        <LinearLayout
            android:id="@+id/linerlayoutminute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal"
            android:layout_marginTop="20dp" >

        </LinearLayout>

        <ImageView
            android:id="@+id/viewdivider1"
            android:layout_width="1px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="-50dp"
            android:background="#247c97" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/viewdivider1"
            android:orientation="vertical" >

        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>

